feat: refine super-admin bootstrap flow
修改说明：

1. 修改超管的创建流程：创建超管 -> 发送认证邮件（暂时使用虚拟 SMTP）-> 修改超管密码 -> MFA 认证（暂时使用 Google 认证）-> 使用新超管登录超管工作台。

2. 修改 Bootstrap 创建流程：Bootstrap 不能登录，只作为项目初始化启动引导。目前修改都是最佳实践的最小实现。

3. 下一步改造：将发送邮件功能独立成一个 adapter。