@@ -9,20 +9,20 @@
  */
 package io.brix.platform.auth.flow;
 
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Supplier;
 import java.util.UUID;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import io.brix.platform.auth.PlatformPermissions;
 import io.brix.platform.auth.internal.RbacResolver;
 import io.runtime.sdk.capability.AuthFlowCapability;
 import io.runtime.sdk.capability.AuthFlowCapability.AuthFlowException;
-import io.runtime.sdk.capability.AuthFlowCapability.MfaVerifyCommand;
 import io.runtime.sdk.capability.IdentityTenantCapability;
 import io.runtime.sdk.capability.IdentityTenantCapability.IdentityRecord;
 import io.runtime.sdk.capability.IdentityTenantCapability.PlatformAdminRecord;
@@ -62,6 +62,8 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
     private static final Logger log = LoggerFactory.getLogger(AuthFlowCapabilityImpl.class);
 
     private static final String IDENTITY_STATUS_ACTIVE = "ACTIVE";
+        private static final String IDENTITY_STATUS_PENDING_SETUP = "PENDING_SETUP";
+        private static final String IDENTITY_STATUS_LOCKED = "LOCKED";
     private static final String ROLE_TYPE_ACTOR = "actor";
     private static final String ROLE_TYPE_SUBJECT = "subject";
 
@@ -71,6 +73,8 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
     private final RbacResolver rbacResolver;
     /** A2: optional — when absent, refresh token rotation is unavailable. */
     private final RefreshTokenCapability refreshTokenCapability;
+        private final Supplier<MfaLoginSupport> mfaLoginSupportSupplier;
+        private final PlatformLoginLockoutProperties lockoutProperties;
 
     public AuthFlowCapabilityImpl(IdentityTenantCapability identityTenantCapability,
                                   PasswordCapability passwordCapability,
@@ -84,55 +88,41 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                                   JwtIssuerCapability jwtIssuerCapability,
                                   RbacResolver rbacResolver,
                                   RefreshTokenCapability refreshTokenCapability) {
+        this(identityTenantCapability, passwordCapability, jwtIssuerCapability, rbacResolver,
+                refreshTokenCapability, () -> null);
+    }
+
+    public AuthFlowCapabilityImpl(IdentityTenantCapability identityTenantCapability,
+                                  PasswordCapability passwordCapability,
+                                  JwtIssuerCapability jwtIssuerCapability,
+                                  RbacResolver rbacResolver,
+                                  RefreshTokenCapability refreshTokenCapability,
+                                  Supplier<MfaLoginSupport> mfaLoginSupportSupplier) {
+        this(identityTenantCapability, passwordCapability, jwtIssuerCapability, rbacResolver,
+                refreshTokenCapability, mfaLoginSupportSupplier, new PlatformLoginLockoutProperties());
+    }
+
+    public AuthFlowCapabilityImpl(IdentityTenantCapability identityTenantCapability,
+                                  PasswordCapability passwordCapability,
+                                  JwtIssuerCapability jwtIssuerCapability,
+                                  RbacResolver rbacResolver,
+                                  RefreshTokenCapability refreshTokenCapability,
+                                  Supplier<MfaLoginSupport> mfaLoginSupportSupplier,
+                                  PlatformLoginLockoutProperties lockoutProperties) {
         this.identityTenantCapability = identityTenantCapability;
         this.passwordCapability = passwordCapability;
         this.jwtIssuerCapability = jwtIssuerCapability;
         this.rbacResolver = rbacResolver;
         this.refreshTokenCapability = refreshTokenCapability;
+        this.mfaLoginSupportSupplier = mfaLoginSupportSupplier != null ? mfaLoginSupportSupplier : () -> null;
+        this.lockoutProperties = lockoutProperties != null ? lockoutProperties : new PlatformLoginLockoutProperties();
     }
 
     // ==================== AuthFlowCapability ====================
 
     @Override
     public LoginResult login(LoginCommand command) {
-        if (command == null || command.loginId() == null || command.loginId().isBlank()) {
-            throw new AuthFlowException(
-                    AuthFlowException.CODE_INVALID_CREDENTIALS, "loginId is required");
-        }
-        String loginId = command.loginId();
-
-        IdentityRecord identity = identityTenantCapability.findIdentityByEmail(loginId)
-                .orElse(null);
-        if (identity == null) {
-            log.warn("[AuthFlow] login failed — identity not found: {}", loginId);
-            throw new AuthFlowException(
-                    AuthFlowException.CODE_INVALID_CREDENTIALS, "Invalid credentials");
-        }
-
-        if (!IDENTITY_STATUS_ACTIVE.equals(identity.status())) {
-            log.warn("[AuthFlow] login failed — identity not active: {} (status={})",
-                    loginId, identity.status());
-            throw new AuthFlowException(
-                    AuthFlowException.CODE_ACCOUNT_DISABLED,
-                    "Account is disabled. Please contact the administrator.");
-        }
-
-        if (identity.passwordHash() == null
-                || !passwordCapability.verify(command.password(), identity.passwordHash())) {
-            log.warn("[AuthFlow] login failed — wrong password: {}", loginId);
-            throw new AuthFlowException(
-                    AuthFlowException.CODE_INVALID_CREDENTIALS, "Invalid credentials");
-        }
-
-        // S3 — PlatformAdmin 优先路径：密码验证通过后，若身份是活跃平台管理员，
-        // 直接签发 Platform Admin Token（无租户）并返回 COMPLETE。
-        Optional<PlatformAdminRecord> adminOpt =
-                identityTenantCapability.findActivePlatformAdmin(identity.id());
-        if (adminOpt.isPresent()) {
-            log.info("[AuthFlow] PlatformAdmin login: identity={}, role={}",
-                    identity.id(), adminOpt.get().adminRole());
-            return buildPlatformAdminLoginResult(identity, adminOpt.get());
-        }
+        IdentityRecord identity = authenticateIdentity(command);
 
         List<TenantMembershipRecord> memberships =
                 identityTenantCapability.getActiveMemberships(identity.id());
@@ -143,7 +133,7 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
 
         if (total == 0) {
             log.warn("[AuthFlow] login — no active tenant associations: identity={} ({})",
-                    identity.id(), loginId);
+                    identity.id(), command.loginId());
             throw new AuthFlowException(
                     AuthFlowException.CODE_NO_TENANT_ASSOCIATION,
                     "No active tenant associations. Please contact the administrator.");
@@ -185,8 +175,24 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                 /* roles */ Collections.emptyList(),
                 /* permissions */ Collections.emptyList(),
                 /* mustChangePassword */ identity.passwordMustChange(),
-                /* mfaRequired */ false,
-                /* platformAdminMode */ false);
+                /* mfaRequired */ false);
+    }
+
+    @Override
+    public LoginResult loginPlatformAdmin(LoginCommand command) {
+                IdentityRecord identity = authenticateIdentity(command, true);
+        PlatformAdminRecord admin = identityTenantCapability.findActivePlatformAdmin(identity.id())
+                .orElseThrow(() -> {
+                    log.warn("[AuthFlow] platform login rejected — identity is not an active platform admin: {}",
+                            identity.id());
+                    return new AuthFlowException(
+                            AuthFlowException.CODE_INVALID_CREDENTIALS,
+                            "Invalid credentials");
+                });
+
+        log.info("[AuthFlow] platform admin login: identity={}, role={}",
+                identity.id(), admin.adminRole());
+        return buildPlatformAdminLoginResult(identity, admin);
     }
 
     @Override
@@ -264,7 +270,7 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                     .orElseThrow(() -> new AuthFlowException(
                             AuthFlowException.CODE_ACCOUNT_DISABLED,
                             "Platform admin account is no longer active"));
-            return buildPlatformAdminLoginResult(identity, admin, rotated.newTokenId());
+            return buildPlatformAdminLoginResult(identity, admin);
         }
 
         // For tenant member/principal refresh, re-authenticate requires tenant selection.
@@ -281,17 +287,18 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                 identity.id(), null, identity.email(),
                 null,
                 Collections.emptyList(), Collections.emptyList(),
-                identity.passwordMustChange(), false, false);
+                identity.passwordMustChange(), false);
     }
 
     @Override
     public LoginResult mfaVerify(MfaVerifyCommand command) {
-        // A1: TOTP verification — full implementation requires a TOTP library (e.g. Google Authenticator).
-        // Stub: block access until TOTP infrastructure is ready.
-        log.warn("[AuthFlow] mfaVerify called but TOTP is not yet implemented");
-        throw new AuthFlowException(
-                AuthFlowException.CODE_MFA_REQUIRED,
-                "MFA/TOTP verification is not yet implemented");
+                MfaLoginSupport mfaLoginSupport = mfaLoginSupportSupplier.get();
+                if (mfaLoginSupport == null) {
+                        throw new AuthFlowException(
+                                        AuthFlowException.CODE_CAPABILITY_UNAVAILABLE,
+                                        "MFA/TOTP verification capability is unavailable.");
+                }
+                return mfaLoginSupport.verify(command);
     }
 
     @Override
@@ -371,7 +378,7 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                     pwdChangeToken, null,
                     identity.id(), null, identity.email(),
                     null, Collections.emptyList(), Collections.emptyList(),
-                    true, false, false);
+                    true, false);
         }
 
         String identityIdStr = String.valueOf(identity.id());
@@ -417,25 +424,18 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                 roles,
                 permissions,
                 identity.passwordMustChange(),
-                /* mfaRequired */ false,
-                /* platformAdminMode */ false);
+                /* mfaRequired */ false);
     }
 
     /**
      * S3 — 构造平台管理员登录结果（无租户上下文）。
      */
     private LoginResult buildPlatformAdminLoginResult(IdentityRecord identity,
-                                                      PlatformAdminRecord admin) {
-        return buildPlatformAdminLoginResult(identity, admin, null);
-    }
-
-    private LoginResult buildPlatformAdminLoginResult(IdentityRecord identity,
-                                                      PlatformAdminRecord admin,
-                                                      String preIssuedRefreshToken) {
+                                                                                                          PlatformAdminRecord admin) {
         // A4: block access if password must be changed — issue a short-lived
         // identity token so the client can authenticate the change-password call
-        // (mirrors the MFA pattern below; required to bootstrap the seeded
-        // SUPER_ADMIN whose password_must_change flag is set by the bootstrap runner).
+        // (mirrors the MFA pattern below; used by setup/reset flows that require
+        // password rotation before issuing a full access token).
         if (identity.passwordMustChange()) {
             log.info("[AuthFlow][A4] platform admin login blocked — password must change: identity={}",
                     identity.id());
@@ -449,68 +449,36 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                     pwdChangeToken, null,
                     identity.id(), identity.username(), identity.email(),
                     null, Collections.emptyList(), Collections.emptyList(),
-                    true, false, true);
+                    true, false);
         }
 
-        // A1: block login if MFA is enabled until TOTP is verified.
-        if (admin.mfaEnabled()) {
-            log.info("[AuthFlow][A1] MFA required for admin: identity={}, adminId={}",
+        if (!admin.mfaEnabled()) {
+            log.warn("[AuthFlow][A1] platform admin login rejected — MFA is not bound: identity={}, adminId={}",
                     identity.id(), admin.adminId());
-            // Issue a short-lived identity/challenge token the MFA endpoint can validate.
-            String challengeToken = jwtIssuerCapability.issueIdentityToken(
-                    new JwtIssuerCapability.IdentityTokenRequest(
-                            identity.id(), identity.email(), identity.username()));
-            return new LoginResult(
-                    LoginStatus.MFA_REQUIRED,
-                    null, null,
-                    jwtIssuerCapability.getIdentityTokenExpirationSeconds(),
-                    challengeToken, null,
-                    identity.id(), identity.username(), identity.email(),
-                    null, Collections.emptyList(), Collections.emptyList(),
-                    false, true, true);
+            throw new AuthFlowException(
+                    AuthFlowException.CODE_MFA_SETUP_REQUIRED,
+                    "Platform administrator MFA setup is required.");
         }
 
-        // P0-2: Compute actual permissions for this admin role.
-        List<String> adminPermissions = PlatformPermissions.defaultPermissionsFor(admin.adminRole());
-
-        // A3: embed per-user token version in JWT.
-        String accessToken = jwtIssuerCapability.issuePlatformAdminToken(
-                new JwtIssuerCapability.PlatformAdminTokenRequest(
+        log.info("[AuthFlow][A1] MFA required for admin: identity={}, adminId={}",
+                identity.id(), admin.adminId());
+        String challengeToken = jwtIssuerCapability.issuePlatformMfaChallengeToken(
+                new JwtIssuerCapability.PlatformMfaChallengeTokenRequest(
                         admin.adminId(),
                         identity.id(),
                         identity.email(),
                         identity.username(),
                         admin.adminRole(),
-                        adminPermissions,
-                        identity.tokenVersion()  // A3
-                ));
-
-        // A2: persist or reuse refresh token.
-        String refreshToken = preIssuedRefreshToken != null
-                ? preIssuedRefreshToken
-                : UUID.randomUUID().toString();
-        if (preIssuedRefreshToken == null && refreshTokenCapability != null) {
-            refreshTokenCapability.store(refreshToken, identity.id(), admin.adminId(),
-                    jwtIssuerCapability.getAccessTokenExpirationSeconds() * 24);
-        }
-
-        String primaryRole = admin.adminRole();
+                        identity.tokenVersion()));
         return new LoginResult(
-                LoginStatus.COMPLETE,
-                accessToken,
-                refreshToken,
-                jwtIssuerCapability.getAccessTokenExpirationSeconds(),
-                /* identityToken */ null,
-                /* tenantOptions */ null,
-                identity.id(),
-                identity.username(),
-                identity.email(),
-                primaryRole,
-                List.of(primaryRole),
-                adminPermissions,
-                false, // passwordMustChange is false here (already gated above)
-                /* mfaRequired */ false,
-                /* platformAdminMode */ true);
+                LoginStatus.MFA_REQUIRED,
+                null, null,
+                jwtIssuerCapability.getIdentityTokenExpirationSeconds(),
+                challengeToken, null,
+                identity.id(), identity.username(), identity.email(),
+                null, Collections.emptyList(), Collections.emptyList(),
+                false, true);
+
     }
 
     private LoginResult buildSubjectLoginResult(IdentityRecord identity, TenantPrincipalRecord p) {
@@ -530,7 +498,7 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                     pwdChangeToken, null,
                     identity.id(), null, identity.email(),
                     null, Collections.emptyList(), Collections.emptyList(),
-                    true, false, false);
+                    true, false);
         }
 
         // A3: embed per-user token version in JWT.
@@ -569,8 +537,82 @@ public class AuthFlowCapabilityImpl implements AuthFlowCapability {
                 List.of(primaryRole),
                 Collections.emptyList(),
                 false, // passwordMustChange gated above
-                /* mfaRequired */ false,
-                /* platformAdminMode */ false);
+                /* mfaRequired */ false);
+    }
+
+    /**
+     * Validates the login command and verifies the identity password.
+     *
+     * @param command login command
+     * @return active identity whose password matched the supplied credential
+     * @throws AuthFlowException when credentials are invalid or the identity is not active
+     */
+        private IdentityRecord authenticateIdentity(LoginCommand command) {
+                return authenticateIdentity(command, false);
+        }
+
+        private IdentityRecord authenticateIdentity(LoginCommand command, boolean trackPlatformLoginFailures) {
+        if (command == null || command.loginId() == null || command.loginId().isBlank()) {
+            throw new AuthFlowException(
+                    AuthFlowException.CODE_INVALID_CREDENTIALS, "loginId is required");
+        }
+        String loginId = command.loginId();
+
+        IdentityRecord identity = identityTenantCapability.findIdentityByEmail(loginId)
+                .orElse(null);
+        if (identity == null) {
+            log.warn("[AuthFlow] login failed — identity not found: {}", loginId);
+            throw new AuthFlowException(
+                    AuthFlowException.CODE_INVALID_CREDENTIALS, "Invalid credentials");
+        }
+
+        if (IDENTITY_STATUS_PENDING_SETUP.equals(identity.status())) {
+            log.warn("[AuthFlow] login failed — identity pending setup: {}", loginId);
+            throw new AuthFlowException(
+                    AuthFlowException.CODE_PENDING_SETUP,
+                    "Account setup is pending. Use the dedicated setup flow.");
+        }
+
+        if (IDENTITY_STATUS_LOCKED.equals(identity.status())) {
+                        if (identityTenantCapability.unlockExpiredLoginLock(identity.id(), Instant.now())) {
+                                identity = identityTenantCapability.findIdentityById(identity.id()).orElse(identity);
+                        }
+                }
+
+                if (IDENTITY_STATUS_LOCKED.equals(identity.status())) {
+            log.warn("[AuthFlow] login failed — identity locked: {}", loginId);
+            throw new AuthFlowException(
+                    AuthFlowException.CODE_ACCOUNT_LOCKED,
+                    "Account is locked. Please contact the administrator.");
+        }
+
+        if (!IDENTITY_STATUS_ACTIVE.equals(identity.status())) {
+            log.warn("[AuthFlow] login failed — identity not active: {} (status={})",
+                    loginId, identity.status());
+            throw new AuthFlowException(
+                    AuthFlowException.CODE_ACCOUNT_DISABLED,
+                    "Account is disabled. Please contact the administrator.");
+        }
+
+        if (command.password() == null || identity.passwordHash() == null
+                || !passwordCapability.verify(command.password(), identity.passwordHash())) {
+            log.warn("[AuthFlow] login failed — wrong password: {}", loginId);
+                        if (trackPlatformLoginFailures) {
+                                identityTenantCapability.recordFailedLogin(identity.id(),
+                                                lockoutProperties.getMaxFailedAttempts(),
+                                                lockoutProperties.getLockMinutes(),
+                                                command.clientIp());
+                        }
+            throw new AuthFlowException(
+                    AuthFlowException.CODE_INVALID_CREDENTIALS, "Invalid credentials");
+        }
+
+                if (trackPlatformLoginFailures) {
+                        identityTenantCapability.recordSuccessfulLogin(identity.id(), command.clientIp());
+                        identity = identityTenantCapability.findIdentityById(identity.id()).orElse(identity);
+                }
+
+        return identity;
     }
 
     private List<String> resolveRoles(String identityId, String tenantId) {
